[package]
name = "nodes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", default-features = false }
either = { default-features = false, version = "1.9.0" }
embedded-hal = { version = "0.2.7" }
heapless = "0.7.16"
nb = "1.1.0"
