
[package]
name = "nodes_n_procs"
version = "0.1.0"
edition="2021"

[lib]
crate-type = ["lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
nnp_base = { path= "../nnp_base" }
anyhow = { version = "1.0.75", default-features = false }
either = { default-features = false, version = "1.9.0", features = [] }
embedded-hal = { version = "0.2.7" }
embedded-io = { version = "0.6.1", features = ["alloc"] }
heapless = "0.8.0"
nb = "1.1.0"
fixed = "1.24.0"
num-traits = { version = "0.2.17", default-features = false}
