[package]
name = "nodes_base_runner_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro=true
crate-type=["proc-macro"]



[dependencies]
nodes_base_nodes = { version = "0.1.0", path = "../../nodes_base_nodes" }
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.39", features=["extra-traits", "full"] }
log = "0.4.20"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
