[package]
name = "nnp_base_runner_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
nnp_base_core = { version = "0.1.0",  path = "../../nnp_base_core" }
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.39", features=["extra-traits", "full"] }
log = "0.4.20"
heapless = "0.8.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
